--- a/.gitignore
+++ b/.gitignore
@@ -163,7 +163,7 @@ ecf/
 rcf/
 
 # Microsoft Azure ApplicationInsights config file
-ApplicationInsights.config
+
 
 # Windows Store app package directory
 AppPackages/
@@ -198,7 +198,8 @@ UpgradeLog*.XML
 UpgradeLog*.htm
 
 # SQL Server files
-
+.mdf
+.ldf
 
 # Business Intelligence projects
 *.rdl.data
