--- a/Crafty/Crafty/Web.config
+++ b/Crafty/Crafty/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Crafty-20160222041330.mdf;Initial Catalog=aspnet-Crafty-20160222041330;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="RegisteredUserDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Crafty-20160222041330.mdf; Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -78,7 +79,14 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <!--added below code WHICH IS CAUSING PROGRAM ERRORS--> 
+    <!--<contexts>
+      <context type="Crafty.Models.Survey">
+        <databaseInitializer type="Crafty.Models.SurveyInitializer, Crafty" />
+      </context>-->
+    <!--</contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+
       <parameters>
         <parameter value="mssqllocaldb" />
       </parameters>
