--- a/Crafty/Crafty/Crafty.csproj
+++ b/Crafty/Crafty/Crafty.csproj
@@ -221,6 +221,10 @@
     <Compile Include="Migrations\201602241800002_Migration.Designer.cs">
       <DependentUpon>201602241800002_Migration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602242144249_IntialMigration.cs" />
+    <Compile Include="Migrations\201602242144249_IntialMigration.Designer.cs">
+      <DependentUpon>201602242144249_IntialMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -294,7 +298,6 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Home\Survey.cshtml" />
     <Content Include="Views\Home\Products.cshtml" />
     <Content Include="Views\RegisteredUsers\Create.cshtml" />
     <Content Include="Views\RegisteredUsers\Delete.cshtml" />
@@ -325,6 +328,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201602241800002_Migration.resx">
       <DependentUpon>201602241800002_Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602242144249_IntialMigration.resx">
+      <DependentUpon>201602242144249_IntialMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
