--- a/Crafty/Crafty/Crafty.csproj
+++ b/Crafty/Crafty/Crafty.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props')" />
@@ -217,13 +217,9 @@
     <Compile Include="MasterPage.Master.designer.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201602241800002_Migration.cs" />
-    <Compile Include="Migrations\201602241800002_Migration.Designer.cs">
-      <DependentUpon>201602241800002_Migration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201602242144249_IntialMigration.cs" />
-    <Compile Include="Migrations\201602242144249_IntialMigration.Designer.cs">
-      <DependentUpon>201602242144249_IntialMigration.cs</DependentUpon>
+    <Compile Include="Migrations\201602242235428_Migration.cs" />
+    <Compile Include="Migrations\201602242235428_Migration.Designer.cs">
+      <DependentUpon>201602242235428_Migration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -326,11 +322,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201602241800002_Migration.resx">
-      <DependentUpon>201602241800002_Migration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602242144249_IntialMigration.resx">
-      <DependentUpon>201602242144249_IntialMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201602242235428_Migration.resx">
+      <DependentUpon>201602242235428_Migration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
