Survey model changes

--- a/Crafty/Crafty/Crafty.csproj
+++ b/Crafty/Crafty/Crafty.csproj
@@ -218,6 +218,10 @@
     <Compile Include="MasterPage.Master.designer.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602252006356_migration.cs" />
+    <Compile Include="Migrations\201602252006356_migration.Designer.cs">
+      <DependentUpon>201602252006356_migration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Box.cs" />
@@ -325,6 +329,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201602252006356_migration.resx">
+      <DependentUpon>201602252006356_migration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
