--- a/Crafty/Crafty/Crafty.csproj
+++ b/Crafty/Crafty/Crafty.csproj
@@ -226,15 +226,29 @@
     <Compile Include="Migrations\201602252120184_migration1.Designer.cs">
       <DependentUpon>201602252120184_migration1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602252220369_migration2.cs" />
+    <Compile Include="Migrations\201602252220369_migration2.Designer.cs">
+      <DependentUpon>201602252220369_migration2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201602252222439_migration3.cs" />
+    <Compile Include="Migrations\201602252222439_migration3.Designer.cs">
+      <DependentUpon>201602252222439_migration3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AlcoholProduct.cs" />
+    <Compile Include="Models\Beer.cs" />
     <Compile Include="Models\Box.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\RegisteredUserModel.cs" />
     <Compile Include="Models\RoleActions.cs" />
+    <Compile Include="Models\Rum.cs" />
     <Compile Include="Models\Survey.cs" />
     <Compile Include="Models\RegisteredUserDBContext.cs" />
+    <Compile Include="Models\Tequila.cs" />
+    <Compile Include="Models\Vodka.cs" />
+    <Compile Include="Models\Wine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -345,6 +359,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201602252120184_migration1.resx">
       <DependentUpon>201602252120184_migration1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602252220369_migration2.resx">
+      <DependentUpon>201602252220369_migration2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602252222439_migration3.resx">
+      <DependentUpon>201602252222439_migration3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
