minor fixes to view

--- a/Crafty/Crafty/Crafty.csproj
+++ b/Crafty/Crafty/Crafty.csproj
@@ -218,33 +218,9 @@
     <Compile Include="MasterPage.Master.designer.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201602252006356_migration.cs" />
-    <Compile Include="Migrations\201602252006356_migration.Designer.cs">
-      <DependentUpon>201602252006356_migration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201602252120184_migration1.cs" />
-    <Compile Include="Migrations\201602252120184_migration1.Designer.cs">
-      <DependentUpon>201602252120184_migration1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201602252220369_migration2.cs" />
-    <Compile Include="Migrations\201602252220369_migration2.Designer.cs">
-      <DependentUpon>201602252220369_migration2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201602252222439_migration3.cs" />
-    <Compile Include="Migrations\201602252222439_migration3.Designer.cs">
-      <DependentUpon>201602252222439_migration3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201602260011028_migration4.cs" />
-    <Compile Include="Migrations\201602260011028_migration4.Designer.cs">
-      <DependentUpon>201602260011028_migration4.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201602260213347_migration31.cs" />
-    <Compile Include="Migrations\201602260213347_migration31.Designer.cs">
-      <DependentUpon>201602260213347_migration31.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201602260232305_migration41.cs" />
-    <Compile Include="Migrations\201602260232305_migration41.Designer.cs">
-      <DependentUpon>201602260232305_migration41.cs</DependentUpon>
+    <Compile Include="Migrations\201602260423282_initial.cs" />
+    <Compile Include="Migrations\201602260423282_initial.Designer.cs">
+      <DependentUpon>201602260423282_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -366,26 +342,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201602252006356_migration.resx">
-      <DependentUpon>201602252006356_migration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602252120184_migration1.resx">
-      <DependentUpon>201602252120184_migration1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602252220369_migration2.resx">
-      <DependentUpon>201602252220369_migration2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602252222439_migration3.resx">
-      <DependentUpon>201602252222439_migration3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602260011028_migration4.resx">
-      <DependentUpon>201602260011028_migration4.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602260213347_migration31.resx">
-      <DependentUpon>201602260213347_migration31.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602260232305_migration41.resx">
-      <DependentUpon>201602260232305_migration41.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201602260423282_initial.resx">
+      <DependentUpon>201602260423282_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
