--- a/Crafty/Crafty/Crafty.csproj
+++ b/Crafty/Crafty/Crafty.csproj
@@ -222,6 +222,10 @@
     <Compile Include="Migrations\201602260423282_initial.Designer.cs">
       <DependentUpon>201602260423282_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602261439526_migration6.cs" />
+    <Compile Include="Migrations\201602261439526_migration6.Designer.cs">
+      <DependentUpon>201602261439526_migration6.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AlcoholProduct.cs" />
@@ -344,6 +348,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201602260423282_initial.resx">
       <DependentUpon>201602260423282_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602261439526_migration6.resx">
+      <DependentUpon>201602261439526_migration6.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
