--- a/Crafty/Crafty/Crafty.csproj
+++ b/Crafty/Crafty/Crafty.csproj
@@ -218,13 +218,9 @@
     <Compile Include="MasterPage.Master.designer.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201602260423282_initial.cs" />
-    <Compile Include="Migrations\201602260423282_initial.Designer.cs">
-      <DependentUpon>201602260423282_initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201602261439526_migration6.cs" />
-    <Compile Include="Migrations\201602261439526_migration6.Designer.cs">
-      <DependentUpon>201602261439526_migration6.cs</DependentUpon>
+    <Compile Include="Migrations\201602261730179_inial.cs" />
+    <Compile Include="Migrations\201602261730179_inial.Designer.cs">
+      <DependentUpon>201602261730179_inial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -237,6 +233,7 @@
     <Compile Include="Models\RegisteredUserModel.cs" />
     <Compile Include="Models\RoleActions.cs" />
     <Compile Include="Models\Rum.cs" />
+    <Compile Include="Models\Specialty.cs" />
     <Compile Include="Models\Stout.cs" />
     <Compile Include="Models\Survey.cs" />
     <Compile Include="Models\RegisteredUserDBContext.cs" />
@@ -347,11 +344,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201602260423282_initial.resx">
-      <DependentUpon>201602260423282_initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602261439526_migration6.resx">
-      <DependentUpon>201602261439526_migration6.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201602261730179_inial.resx">
+      <DependentUpon>201602261730179_inial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
