--- a/Crafty/Crafty/Crafty.csproj
+++ b/Crafty/Crafty/Crafty.csproj
@@ -204,10 +204,8 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminsController.cs" />
-    <Compile Include="Controllers\BoxModelsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\RegisteredUsersController.cs" />
     <Compile Include="Controllers\SurveyController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -219,9 +217,9 @@
     <Compile Include="MasterPage.Master.designer.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201602291403459_22916.cs" />
-    <Compile Include="Migrations\201602291403459_22916.Designer.cs">
-      <DependentUpon>201602291403459_22916.cs</DependentUpon>
+    <Compile Include="Migrations\201602291639211_migration2.cs" />
+    <Compile Include="Migrations\201602291639211_migration2.Designer.cs">
+      <DependentUpon>201602291639211_migration2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -315,26 +313,9 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Products.cshtml" />
-    <Content Include="Views\RegisteredUsers\Create.cshtml" />
-    <Content Include="Views\RegisteredUsers\Delete.cshtml" />
-    <Content Include="Views\RegisteredUsers\Details.cshtml" />
-    <Content Include="Views\RegisteredUsers\Edit.cshtml" />
-    <Content Include="Views\RegisteredUsers\Index.cshtml" />
     <Content Include="Views\Survey\Create.cshtml" />
-    <Content Include="Views\Survey\Delete.cshtml" />
-    <Content Include="Views\Survey\Details.cshtml" />
-    <Content Include="Views\Survey\Edit.cshtml" />
     <Content Include="Views\Survey\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\BoxModels\Create.cshtml" />
-    <Content Include="Views\BoxModels\Delete.cshtml" />
-    <Content Include="Views\BoxModels\Details.cshtml" />
-    <Content Include="Views\BoxModels\Edit.cshtml" />
-    <Content Include="Views\BoxModels\Index.cshtml" />
-    <Content Include="Views\Admins\Create.cshtml" />
-    <Content Include="Views\Admins\Delete.cshtml" />
-    <Content Include="Views\Admins\Details.cshtml" />
-    <Content Include="Views\Admins\Edit.cshtml" />
     <Content Include="Views\Admins\Index.cshtml" />
     <Content Include="Views\Manage\Purchase.cshtml" />
     <Content Include="Views\Survey\ThankYou.cshtml" />
@@ -355,8 +336,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201602291403459_22916.resx">
-      <DependentUpon>201602291403459_22916.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201602291639211_migration2.resx">
+      <DependentUpon>201602291639211_migration2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
