--- a/Crafty/Crafty/Crafty.csproj
+++ b/Crafty/Crafty/Crafty.csproj
@@ -256,6 +256,8 @@
     <Content Include="Photo\liquor.jpg" />
     <Content Include="Photo\whisky.jpg" />
     <Content Include="Photo\wine.jpg" />
+    <Content Include="Photo\wordcloud 2.png" />
+    <Content Include="Photo\wordcloud.png" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
